# yaml-batch-loader

./: .gitignore  README.md  __main__.py  batcher.py  ci.yml  cli.py  config.py  filter.py  invalid_config.yaml  models.py  pipeline_360.yaml  pipeline_config.yaml  pyproject.toml  test_batcher.py  test_cli.py  test_filter.py
.devcontainer/: devcontainer.json
src/batch_loader/: __init__.py
tests/: test_config.py  test_models.py
