[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "batch-loader"
version = "0.1.0"
description = "YAML-driven batch config loader for data pipelines"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
batch-loader = "batch_loader.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
